# fsm-lib

./: CMakeLists.txt  LICENSE
include/pfs/: fsm.hpp  fsm_match.hpp  fsm_traits.hpp
tests/: CMakeLists.txt  fsm.cpp  test.hpp
